--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "author": "",
   "license": "ISC",
+  "homepage": "https://pauline-sh.github.io/SlempyBirb",
   "dependencies": {
     "@babel/polyfill": "^7.8.3",
     "redux": "^4.0.5"
@@ -19,6 +20,7 @@
     "@babel/core": "^7.7.4",
     "@babel/preset-env": "^7.7.4",
     "@rollup/plugin-image": "^2.0.5",
+    "gh-pages": "^3.1.0",
     "rollup": "^1.27.5",
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-commonjs": "^10.1.0",
