--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "rollup -c",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "rollup -cw"
+    "watch": "rollup -cw",
+    "deploy": "gh-pages -d dist"
   },
   "author": "",
   "license": "ISC",
