--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "rollup-plugin-postcss": "^2.0.3",
     "rollup-plugin-replace": "^2.2.0",
     "rollup-plugin-serve": "^1.0.1",
+    "rollup-plugin-terser": "^7.0.1",
     "rollup-plugin-typescript2": "^0.27.1",
     "typescript": "^3.9.6"
   }
